Fix(mobJs) Hide component before fire onMount / prevent slot jump.

--- a/src/scss/component/docContainer/index.scss
+++ b/src/scss/component/docContainer/index.scss
@@ -29,7 +29,7 @@
         height: calc(100vh - var(--header-height) - var(--footer-height));
         border-left: 1px rgba($black, 0.2) solid;
         overflow: hidden;
-        opacity: 0;
+        // opacity: 0;
 
         &.active {
             opacity: 1;
